Fix: project button bottom margin on small screens
- remove bottom margin in style.css
- add bottom margin of 20px to responsive.css

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,6 +13,12 @@
         margin: 0px 0 0 20px;
     }
 
+    /* portfolio
+    ===========================================*/
+
+    .btn-wrapper {
+    margin-bottom: 20px;
+
 }
 
 @media screen and (min-width: 992px) {
@@ -37,6 +43,8 @@
     #portfolio {
         padding: 55px 30px 0;
     }
+
+}
     /* Contact
     ===========================================*/
 
