--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ h1 {
 .btn-wrapper {
     position:absolute;
     bottom:0;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .btn {
